apps/lldap/lldap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
  namespace: lldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lldap
  template:
    metadata:
      labels:
        app: lldap
    spec:
      enableServiceLinks: false
      nodeSelector:
        kubernetes.io/hostname: borgling-1
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      containers:
        - name: lldap
          image: lldap/lldap:stable
          ports:
            - containerPort: 3890
              name: ldap
            - containerPort: 17170
              name: web
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: lldap-data
