apps/lldap/lldap-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lldap
  namespace: lldap
spec:
  selector:
    app: lldap
  ports:
    - port: 3890
      targetPort: 3890
      name: ldap
    - port: 17170
      targetPort: 17170
      name: web
