apps/lldap/lldap-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lldap-ingress
  namespace: lldap
  annotations:
    nginx.org/location-snippets: |
      auth_request /authelia;
      auth_request_set $target_url https://$http_host$request_uri;
      auth_request_set $user $upstream_http_remote_user;
      auth_request_set $groups $upstream_http_remote_groups;
      error_page 401 @authelia_redirect;
    nginx.org/server-snippets: |
      location = /authelia {
        internal;
        proxy_pass http://authelia.authelia.svc.cluster.local:9091/api/authz/ext-authz;
        proxy_set_header X-Forwarded-Method $request_method;
        proxy_set_header X-Forwarded-Proto https;
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-URI $request_uri;
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_set_header Content-Length "";
        proxy_pass_request_body off;
      }
      location @authelia_redirect {
        return 302 https://authelia.th3borg.org/?rd=$target_url&rm=$request_method;
      }
spec:
  ingressClassName: nginx
  rules:
    - host: lldap.th3borg.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lldap
                port:
                  number: 17170
